--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <a href="http://127.0.0.1:5501/%E8%A1%8C%E9%8A%B7%E5%AD%B8/po/index.html"><img src="assets/img/b1.png" width="20%" alt="" class="rounded-circle b-shadow-a"></a>
+                      <a href="https://eaglek0910.github.io/sell/"><img src="assets/img/b1.png" width="20%" alt="" class="rounded-circle b-shadow-a"></a>
                       <span class="author">圖片展示</span>
                     </div>
                     <div class="content-test">
